# rust-node-workers

./: .gitpod.yml  CHANGELOG.md  Cargo.toml  README.md  index.d.ts  index.js  package.json  rust-node-workers.linux-x64-gnu.node  rust-node-workers.win32-x64-msvc.node  sample.js  tsconfig.json
.github/workflows/: CI.yml  publish.yml
benches/: bench.rs  timing.rs
benches/workers/: fast-inner.js  fast.js  slow-inner.js  slow.js
benchmark/: run-cb.js  run-cmd.js  run-ipc.js  run-workers.js  task-inner.js  task-worker.js  task.js
examples/: get_result.rs  samples.rs  simple.rs  typescript.rs  worker.js  worker.ts
examples/user-files/: pet.ts  user.ts
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: as_payload.rs  bench_rs_call_node.rs  lib.rs  utils.rs  worker.rs  worker_pool.rs  worker_pool_inner.rs  worker_thread.rs
src/js/: bridge.ts
