[package]
edition = "2021"
name = "rust-node-workers"
version = "0.0.0"

[lib]
crate-type = ["lib"]

[dependencies]
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
anyhow = "1.0.56"

[dev-dependencies]
criterion = "0.3"
benchman = "0.2.6"

[[bench]]
name = "bench"
harness = false
[[bench]]
name = "timing"
harness = false

[profile.release]
lto = true

