[package]
edition = "2021"
name = "node-workers"
version = "0.8.0"
authors = ["Cyriac <cyriacbr@gmail.com>"]
description = "A pool of long-lived nodejs workers"
documentation = "https://docs.rs/node_workers"
repository = "https://github.com/CyriacBr/node-workers"
license = "MIT"
keywords = ["nodejs", "js", "worker", "pool", "process"]
categories = ["concurrency"]

[lib]
crate-type = ["lib"]

[dependencies]
serde_json = "1.0.79"
serde = { version = "1.0.136", features = ["derive"] }
anyhow = "1.0.56"
shell-words = "1.1.0"

[dev-dependencies]
criterion = "0.3"
benchman = "0.2.6"

[[bench]]
name = "bench"
harness = false
[[bench]]
name = "timing"
harness = false

[profile.release]
lto = true

